added get pattern
