# routes/user.routes.js
@@ -5,14 +5,13 @@ const {
   register,
   registerInterests,
   assignMatch,
+  gettingResult,
 } = require("../controllers/user.controller");
 const { protect } = require("../middleware/auth");
 const router = express.Router();
-router.route("/")
-.get(getAllUsers)
-.post(register)
-router.route("/assignMatch")
-.put(assignMatch)
+router.route("/").get(getAllUsers).post(register);
+router.route("/assignMatch").put(assignMatch);
+router.route("/getMatch").get(protect,gettingResult);
 router.route("/interest").post(protect, registerInterests);
 router.route("/:id").get(getUser);
 module.exports.userRoutes = router;
